test/tests/RangeTypeMismatch2.expected
RangeTypeMismatch2.frost:4:25: error: expected 'frost.core.Value', but found 'frost.core.String'
1 error
